# ltpt-btl-20261-mt10a_group-1

./: .gitignore  CONVENTIONS.md  README.md  SAD.md  SRS.md  bieu_do.py  build.bat  build.py  clean.bat  clear_cache.py  du_lieu_mau.py  gui.py  main.py  main_cli.py  patients_data.db  phan_tich.py  pyproject.toml  requirements.txt  run_tests.bat  seed_patients.py  setup_env.bat
controllers/: cli_controller.py  patient_controller.py  stats_controller.py
data/: patients.json
models/: db_manager.py  examination.py  medication.py  patient.py  patient_model.py
tabulate-0.10.0.dist-info/: RECORD
templates/: patient_import.csv
tests/: test_db.py  test_patient.py  test_stats.py
utils/: bmi_calculator.py  helpers.py  logger.py  theme_manager.py  validators.py
views/: cli_view.py  examination_view.py  follow_up_view.py  main_window.py  manage_view.py  medication_view.py  patient_form.py  patient_view.py  stats_view.py
